Fixed project text alignment and updated SegmentedControl.

--- a/src/components/ProjectLayout/index.css
+++ b/src/components/ProjectLayout/index.css
@@ -11,8 +11,8 @@
 .project__section {
   position: relative;
   width: 100vw;
-  padding-top: var(--space4XL);
-  padding-bottom: var(--space4XL);
+  padding-top: var(--space5XL);
+  padding-bottom: var(--space5XL);
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -21,8 +21,8 @@
 
 .project__section--light {
   background: rgb(var(--rgbBackgroundLight));
-  padding-top: var(--space5XL);
-  padding-bottom: calc(var(--space5XL) + var(--spaceXL));
+  /* padding-top: var(--space5XL);
+  padding-bottom: calc(var(--space5XL) + var(--spaceXL)); */
 }
 
 @media (max-width: 1024px) {
@@ -32,10 +32,10 @@
     height: auto;
   }
 
-  .project__section--light {
+  /* .project__section--light {
     padding-top: var(--space3XL);
     padding-bottom: var(--space4XL);
-  }
+  } */
 }
 
 @media (max-width: 696px) {
@@ -44,10 +44,10 @@
     padding-bottom: var(--space2XL);
   }
 
-  .project__section--light {
+  /* .project__section--light {
     padding-top: var(--space2XL);
     padding-bottom: var(--space4XL);
-  }
+  } */
 }
 
 .project__background-image {
@@ -256,15 +256,15 @@
   max-width: 100%;
 }
 
-.project__image div {
+.project__image .image {
   width: 100%;
 }
 
 .project__section-content {
   max-width: var(--maxWidthL);
   width: 100%;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-gap: var(--space3XL);
 }
 
 .project__section-content--wide {
@@ -289,7 +289,6 @@
 .project__text-row {
   max-width: var(--maxWidthM);
   align-self: center;
-  margin-bottom: var(--space3XL);
   text-align: left;
   position: relative;
   display: flex;
@@ -307,15 +306,15 @@
 }
 
 .project__text-row--justify-start {
-  align-self: flex-start;
+  justify-self: flex-start;
 }
 
 .project__text-row--justify-center {
-  align-self: center;
+  justify-self: center;
 }
 
 .project__text-row--justify-end {
-  align-self: flex-end;
+  justify-self: flex-end;
 }
 
 @media (max-width: 696px) {
